--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Android">
-        <activity android:name=".RelativeLayout"></activity>
+        <activity android:name=".FrameLayout"></activity>
+        <activity android:name=".TableLayout" />
+        <activity android:name=".RelativeLayout" />
         <activity android:name=".LinearLayout" />
         <activity android:name=".MainActivity">
             <intent-filter>
