--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/avatar"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/avatar"
         android:supportsRtl="true"
         android:theme="@style/Theme.Android">
-        <activity android:name=".FrameLayout"></activity>
+        <activity android:name=".ListView"></activity>
+        <activity android:name=".listview" />
+        <activity android:name=".FrameLayout" />
         <activity android:name=".TableLayout" />
         <activity android:name=".RelativeLayout" />
         <activity android:name=".LinearLayout" />
