--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/avatar"
         android:supportsRtl="true"
         android:theme="@style/Theme.Android">
-        <activity android:name=".ListView"></activity>
+        <activity android:name=".RecyclerView"></activity>
+        <activity android:name=".CardViewSpinner" />
+        <activity android:name=".ListView" />
         <activity android:name=".listview" />
         <activity android:name=".FrameLayout" />
         <activity android:name=".TableLayout" />
