--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/avatar"
         android:supportsRtl="true"
         android:theme="@style/Theme.Android">
-        <activity android:name=".RecyclerView"></activity>
+        <activity
+            android:name=".Detail_Book"
+            android:label="@string/title_activity_detail_book"
+            android:theme="@style/Theme.Android.NoActionBar"></activity>
+        <activity android:name=".Book" />
+        <activity android:name=".RecyclerView" />
         <activity android:name=".CardViewSpinner" />
         <activity android:name=".ListView" />
         <activity android:name=".listview" />
